Added extensive javadoc and ExceptionHandling to BoardGame